# microPOS-API

./: .dockerignore  .env.development  .gitignore  Dockerfile  README.md  project-structure.txt  pyproject.toml  requirements.txt  run.py  start_app.py  start_config.py  start_seed.py
src/: app.py  config.py  database.py
src/api/category/: router.py
src/api/item/: router.py  schemas.py
src/api/storage/: router.py  schemas.py
supabase/: config.toml
supabase/migrations/: 20241108062728_remote_schema.sql
tests/: test_item.py  test_seeder.py
utils/: exceptions.py  logger.py  logging.py  seeder.py
